[package]
name = "hlp-toshogu"
version = "0.1.0"
edition = "2021"
authors = ["Stephan Thomas"]
description = "Advanced monitoring dashboard for HLP vault with real-time market microstructure analysis"
license = "MIT"
repository = "https://github.com/ironcrypto/hlp-toshogu"
keywords = ["hyperliquid", "trading", "monitoring", "defi", "metrics"]
categories = ["command-line-utilities", "finance"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2.4"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.31", features = ["serde-float"] }
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.0", features = ["derive"] }
figment = { version = "0.10", features = ["toml", "env"] }
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
toml = "0.8"
rand = "0.8"
rust_decimal_macros = "1"
tui-logger = "0.17.3"

[features]
default = ["sdk"]
sdk = []

[[bin]]
name = "hlp-toshogu"
path = "src/main.rs"